# sandbox

./: .cookiecutter.json  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  hello.py  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/sandbox/: __main__.py
tests/: __init__.py  test_main.py
