[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["staticdev <thiagocavila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanizer-portugues = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
