[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["staticdev <staticdev-support@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
SQLAlchemy = ">=1.4.45"
SQLAlchemy-Utils = ">=0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
